@@ -673,7 +673,6 @@ pm-nickel-tailings-looping=Nickel tailings looping
 pm-tin-chunk-leeching=Tin chunk leeching
 pm-salt-electroylsis=Salt electrolysis
 pm-phosphoric-acid-filtering=Phosphoric acid filtering
-
 pm-sulfur-dioxide-cracking=Sulfur dioxide cracking
 pm-orange-circuit-molding=Fluid-resistant circuit molding
 pm-orange-breadboard-molding=Fluid-resistant breadboard molding
@@ -718,7 +717,6 @@ pm-bitumen-washing=Bitumen washing
 pm-lubricant=Lubricating Oil filtering
 pm-refinery-gases-refining=Refinery gas refining
 pm-palladium-catalyst-refinery-gas-cracking=Palladium catalyst Refinery gas cracking
-
 pm-common-diesel-cracking=Common Diesel cracking
 pm-titanium-chlorination=Titanium chlorination
 pm-titanium-chloride-seperation=Titanium chloride seperation
@@ -867,6 +865,7 @@ pm-high-quality-quartzite-seperation=High quality quartzite seperation
 pm-low-quality-quartzite-seperation=low quality quartzite seperation
 pm-industrial-grade-silicon=Industrial-grade silicon
 pm-silicon-tetrachloride-handling=Silicon tetrachloride handling
+pm-chunk-slag-leeching=Chunk ore slag leeching
 
 pm-iron-plate-melting=Iron plate melting
 pm-copper-plate-melting=Copper plate melting
